tests/error/multiplyInteger-wrong-2nd-argument-bytestring.uplc
(program 1.0.0[[(builtin multiplyInteger)(con integer 10)](con bytestring #AFD3)])